Handle clamping of heights for images affected by background-size and EXIF orientation correctly https://bugs.webkit.org/show_bug.cgi?id=221005 <rdar://problem/73692426>

Reviewed by Simon Fraser.

Source/WebCore:

GraphicsContext::drawPlatformImage handles requests with source rects
whose heights are greater than the image (which can happen due to
rounding issues) by clamping the source rect.  This clamping incorrectly
looks at the CGImage's height, which for an image rotated 90deg due to
EXIF orientation metadata, is the wrong dimension.

Test: fast/images/image-orientation-background-size-bug.html

* platform/graphics/cg/GraphicsContextCG.cpp:
(WebCore::GraphicsContext::drawPlatformImage):

LayoutTests:

* fast/images/image-orientation-background-size-bug-expected.html: Added.
* fast/images/image-orientation-background-size-bug.html: Added.
* fast/images/resources/green-504x378-90deg.jpg: Added.  This is a
solid green 504x378 JPEG with an EXIF orientation tag requiring a
90deg rotation.


Canonical link: https://commits.webkit.org/237310@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276984 268f45cc-cd09-0410-ab3c-d52691b4dbfc